# hannah-proto

./: .gitignore  CHANGELOG.md  agent.proto  automation.proto  buf.gen.ts.yaml  buf.yaml  car_state.proto  control.proto  device_control_menu.proto  event_stream.proto  hannah.proto  renovate.json  satellite_provisioning.proto  satellite_proxy.proto  shared.proto  speaker_enrollment.proto  timer_admin.proto  timer_service.proto  user_registry.proto  wakeword_capture.proto
npm/: package-lock.json  package.json
npm/scripts/: generate.sh
python/: pyproject.toml
python/hannah_proto/: __init__.py
scripts/: release.js
